# autoresearch

./: train.py
Desktop/Chemotaxis/: .gitignore
Desktop/Neuroaesthetic_Music/: README.md  __main__.py  conftest.py
Desktop/Pdu_PyRosetta/: BMC_ThermoMPNN_binding.py  EutM_Docking.ipynb  PduJ_SSM.ipynb  create_mutant_prediction_pipeline.py  mutant_prediction_pipeline.ipynb  rmsd_analysis.ipynb  verify_pipeline.py
Desktop/music_visualizer/: config.toml  main.py  pyproject.toml
Desktop/music_visualizer/audio/: analyzer.py  feature_frame.py  live_analyzer.py
Desktop/music_visualizer/docs/superpowers/plans/: 2026-04-04-music-visualizer.md
Desktop/music_visualizer/docs/superpowers/specs/: 2026-04-04-music-visualizer-design.md
Desktop/music_visualizer/engine/: context_engine.py  palette.py  render_params.py
Desktop/music_visualizer/export/: exporter.py
Desktop/music_visualizer/renderer/: post.py  renderer.py
Desktop/music_visualizer/renderer/shaders/: bloom_extract.glsl  blur.glsl  composite.glsl  cosmic.glsl  final.glsl  geometric.glsl  organic.glsl  overlay.glsl  quad.vert
Desktop/music_visualizer/tests/: conftest.py  test_analyzer.py  test_context_engine.py  test_exporter.py  test_feature_frame.py  test_integration.py  test_launcher.py  test_live_analyzer.py  test_palette.py  test_renderer.py
Desktop/music_visualizer/ui/: launcher.py
Desktop/tcs_engineering/: PIPELINE_DOCS.md  check_af2.sh  check_diamond.sh  check_fasttree.sh  check_hamp.sh  check_hamp2.sh  check_log.sh  nohup.out  run_curate.sh  run_download.sh  run_esmfold.sh  run_pipeline.sh  (+2 more)
(+15243 files in other folders)
