[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "music_visualizer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
    "moderngl>=5.10",
    "librosa>=0.10",
    "sounddevice>=0.4",
    "moviepy>=1.0",
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
